<resources>
    <string name="app_name">TodoAble</string>
    <string name="title_main">TodoAble</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_title">Title of the task</string>
    <string name="hint_description">Description of the task</string>
    <string name="label_completed">Completed</string>
    <string name="label_all_tasks">All tasks</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_info">Info</string>

    <string name="label_finished_tasks">Finished Tasks</string>
    <string name="label_archived_tasks">Archived Tasks</string>
    <string name="label_ongoing_tasks">Ongoing Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="label_created">Created</string>

    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
</resources>
